[package]
name = "mithril-common"
version = "0.4.101"
description = "Common types, interfaces, and utilities for Mithril nodes."
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore", "openapi.yaml"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bench]]
name = "block_range"
harness = false

[[bench]]
name = "digester"
harness = false
required-features = ["fs"]

[[bench]]
name = "merkle_tree"
harness = false

[[bench]]
name = "merkle_map"
harness = false

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
bech32 = "0.11.0"
blake2 = "0.10.6"
chrono = { version = "0.4.39", features = ["serde"] }
ciborium = "0.2.2"
ckb-merkle-mountain-range = "0.6.0"
digest = "0.10.7"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
fixed = "1.28.0"
glob = { version = "0.3.2", optional = true }
hex = "0.4.3"
jsonschema = { version = "0.28.1", optional = true }
kes-summed-ed25519 = { version = "0.2.1", features = [
    "serde_enabled",
    "sk_clone_enabled",
] }
mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = false }
nom = "7.1.3"
pallas-addresses = { version = "0.32.0", optional = true }
pallas-codec = { version = "0.32.0", optional = true }
pallas-hardano = { version = "0.32.0", optional = true }
pallas-network = { version = "0.32.0", optional = true }
pallas-primitives = { version = "0.32.0", optional = true }
pallas-traverse = { version = "0.32.0", optional = true }
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rayon = "1.10.0"
reqwest = { version = "0.12.12", optional = true }
semver = "1.0.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.134"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
slog = "2.7.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["io-util", "rt", "sync"] }
typetag = "0.2.19"
walkdir = "2.5.0"
warp = { version = "0.3.7", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.99"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
mockall = "0.13.1"
pallas-crypto = "0.32.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12.12", features = ["json"] }
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
mithril-build-script = { path = "../internal/mithril-build-script", version = "=0.2" }

[features]
default = ["rug-backend"]

# Full feature set
full = ["random", "fs", "test_tools"]
random = ["rand_core/getrandom"]
fs = [
    "tokio/fs",
    "tokio/process",
    "dep:pallas-addresses",
    "dep:pallas-codec",
    "dep:pallas-hardano",
    "dep:pallas-network",
    "dep:pallas-primitives",
    "dep:pallas-traverse",
]

# Enables `rug-backend` features for `mithril-stm` dependency
rug-backend = ["mithril-stm/rug-backend"]
# Enables `num-integer-backend` features for `mithril-stm` dependency
# by default it's `rug-backend`
num-integer-backend = ["mithril-stm/num-integer-backend"]

# Disable signer certification, to be used only for tests
allow_skip_signer_certification = []
# Enable all tests tools
test_tools = ["apispec", "test_http_server", "random"]
# Enable tools to helps validate conformity to an OpenAPI specification
apispec = ["dep:glob", "dep:jsonschema", "dep:warp", "dep:reqwest"]
test_http_server = ["dep:warp"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
