[package]
name = "mithril-common"
version = "0.5.24"
description = "Common types, interfaces, and utilities for Mithril nodes."
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore", "openapi.yaml"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bench]]
name = "block_range"
harness = false

[[bench]]
name = "digester"
harness = false
required-features = ["fs"]

[[bench]]
name = "merkle_tree"
harness = false

[[bench]]
name = "merkle_map"
harness = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bech32 = "0.11.0"
blake2 = "0.10.6"
chrono = { workspace = true }
ciborium = "0.2.2"
ckb-merkle-mountain-range = "0.6.1"
digest = { workspace = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
fixed = "1.29.0"
glob = { version = "0.3.2", optional = true }
hex = { workspace = true }
jsonschema = { version = "0.30.0", optional = true }
kes-summed-ed25519 = { version = "0.2.1", features = [
    "serde_enabled",
    "sk_clone_enabled",
] }
mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = false, features = ["batch-verify-aggregates"] }
nom = "8.0.0"
pallas-addresses = { version = "0.32.0", optional = true }
pallas-codec = { version = "0.32.0", optional = true }
pallas-network = { version = "0.32.0", optional = true }
pallas-primitives = { version = "0.32.0", optional = true }
pallas-traverse = { version = "0.32.0", optional = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, optional = true }
semver = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.17"
serde_json = { workspace = true }
serde_with = "3.12.0"
serde_yaml = { version = "0.9.34", optional = true }
sha2 = "0.10.8"
slog = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
typetag = "0.2.20"
walkdir = "2.5.0"
warp = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
mockall = { workspace = true }
pallas-crypto = "0.32.0"
reqwest = { workspace = true }
slog-async = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
mithril-build-script = { path = "../internal/mithril-build-script", version = "=0.2" }

[features]
default = ["rug-backend"]

# Full feature set
full = ["fs", "test_tools"]
fs = [
    "tokio/fs",
    "tokio/io-util",
    "tokio/process",
    "dep:pallas-addresses",
    "dep:pallas-codec",
    "dep:pallas-network",
    "dep:pallas-primitives",
    "dep:pallas-traverse",
]

# Enables `rug-backend` features for `mithril-stm` dependency
rug-backend = ["mithril-stm/rug-backend"]
# Enables `num-integer-backend` features for `mithril-stm` dependency
# by default it's `rug-backend`
num-integer-backend = ["mithril-stm/num-integer-backend"]

# Disable signer certification, to be used only for tests
allow_skip_signer_certification = []
# Enable all tests tools
test_tools = ["apispec", "test_http_server"]
# Enable tools to help validate conformity to an OpenAPI specification
apispec = ["dep:glob", "dep:jsonschema", "dep:serde_yaml", "dep:reqwest", "dep:warp"]
test_http_server = ["dep:warp"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
# `serde_bytes` is used for OpCert serialization
ignored = ["serde_bytes"]
