[package]
name = "mithril-common"
version = "0.6.9"
description = "Common types, interfaces, and utilities for Mithril nodes."
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore", "openapi.yaml"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
# `serde_bytes` is used for OpCert serialization
ignored = ["serde_bytes"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["rug-backend"]

# Full feature set
full = ["test_tools"]

# Enables `rug-backend` features for `mithril-stm` dependency
rug-backend = ["mithril-stm/rug-backend"]
# Enables `num-integer-backend` features for `mithril-stm` dependency
# by default it's `rug-backend`
num-integer-backend = ["mithril-stm/num-integer-backend"]

# Disable signer certification, to be used only for tests
allow_skip_signer_certification = []
# Enable all tests tools
test_tools = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bech32 = "0.11.0"
bincode = { version = "2.0.1", features = ["serde"] }
blake2 = "0.10.6"
chrono = { workspace = true }
ciborium = "0.2.2"
ckb-merkle-mountain-range = "0.6.1"
digest = { workspace = true }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
fixed = "1.29.0"
hex = { workspace = true }
kes-summed-ed25519 = { version = "0.2.1", features = [
    "serde_enabled",
    "sk_clone_enabled",
] }
mithril-stm = { path = "../mithril-stm", version = "=0.4", default-features = false }
nom = "8.0.0"
rand_chacha = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.17"
serde_json = { workspace = true }
serde_with = "3.14.0"
sha2 = "0.10.9"
slog = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
typetag = "0.2.20"
walkdir = "2.5.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"

[build-dependencies]
mithril-build-script = { path = "../internal/mithril-build-script", version = "=0.2" }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports", "async_tokio"] }
mockall = { workspace = true }
slog-async = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[[bench]]
name = "block_range"
harness = false

[[bench]]
name = "merkle_tree"
harness = false

[[bench]]
name = "merkle_map"
harness = false
