[package]
name    = "mithril"
version = "0.1.0"
edition = "2018"

[lib]
name = "mithril"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
blake2      = "0.9.2"
bls12_381 = { version = "0.7.0", features = ["experimental"], optional = true }
blst = { version = "0.3.10", optional = true }
bytes = "1"
digest      = { version = "0.9.0", features = ["alloc"] }
generic-array = "0.14"
group = { version = "0.12.0", features = ["tests"], optional = true }
libc        = "0.2.40"
num-bigint  = "0.4.0"
num-integer = { version = "0.1.44", optional = true }
num-rational = "0.4.0"
num-traits  = "0.2.14"
rand_core   = "0.6.3"
rug = { version = "1.14", optional = true }
serde = { version = "1", features = ["rc"] }
thiserror = "1.0"
typenum     = "1.14.0"

[build-dependencies]
cbindgen    = "0.23.0"

[dev-dependencies]
bincode = "1.3.3"
criterion   = { version = "0.3.5", features = ["html_reports"] }
num-integer = "0.1.44"
proptest    = "1.0.0"
rand = "0.7"
rand_chacha = "0.3.1"
rayon       = "1.5.1"
serde_json = "1"
sha2 = "0.9"

[[bench]]
name = "stm"
harness = false

[[bench]]
name = "size_benches"
harness = false

[features]
default = ["rug", "zcash"]
rug-backend = ["rug/default"]
num-integer-backend = ["num-integer/default"]
pure-rust = ["num-integer-backend", "zcash"]
zcash = ["bls12_381", "group"]
blast = ["blst"]
