[package]
name    = "mithril"
version = "0.1.0"
edition = "2018"

[dependencies]
blake2      = "0.10.4"
blst = { version = "0.3.10" }
digest      = { version = "0.9.0", features = ["alloc"] }
ed25519-dalek = "1.0.1"
kes-summed-ed25519 = { git = "https://github.com/input-output-hk/kes" }
num-bigint  = {version = "0.4.0", optional = true }
num-rational = {version = "0.4.0", optional = true }
num-traits  = {version = "0.2.14", optional = true }
rand_core   = "0.6.3"
rug = { version = "1.14", optional = true }
serde = { version = "1", features = ["rc", "derive"] }
serde_cbor = "0.10"
serde_bytes = "0.11.7"
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.3"
criterion   = { version = "0.4.0", features = ["html_reports"] }
num-bigint  = "0.4.0"
num-rational = "0.4.0"
hex = "0.4.3"
proptest    = "1.0.0"
rand_chacha = "0.3.1"
rayon       = "1.5.1"

[[bench]]
name = "stm"
harness = false

[[bench]]
name = "size_benches"
harness = false

[features]
default = ["rug-backend"]
rug-backend = ["rug/default"]
num-integer-backend = ["num-bigint", "num-rational", "num-traits"]
portable = ["blst/portable"]
