[package]
name = "mithril-fake-aggregator"
version = "0.1.0"
description = "Mithril Fake Aggregator for client testing"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["tokio", "http1"] }
clap = { version = "4.4.11", features = ["derive"] }
clap_derive = "4.4.7"
futures = "0.3.29"
serde_json = "1.0.108"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
