[package]
name = "mithril-relay"
version = "0.1.34"
description = "A Mithril relay"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive", "env"] }
config = "0.15.7"
libp2p = { version = "0.54.1", features = [
    "tokio",
    "gossipsub",
    "dns",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "pnet",
    "quic",
    "tcp",
    "tls",
    "websocket-websys",
    "websocket",
    "yamux",
] }
mithril-common = { path = "../mithril-common", features = ["full"] }
mithril-doc = { path = "../internal/mithril-doc" }
reqwest = { version = "0.12.12", features = [
    "json",
    "gzip",
    "zstd",
    "deflate",
    "brotli"
    ] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
slog-async = "2.8.0"
slog-bunyan = "2.5.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"

[dev-dependencies]
httpmock = "0.7.0"
slog-scope = "4.4.0"
slog-term = "2.9.1"

[features]
bundle_tls = ["reqwest/native-tls-vendored"]
