[package]
name = "mithril-relay"
version = "0.1.55"
description = "A Mithril relay"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
bundle_tls = ["reqwest/native-tls-vendored"]
future_dmq = ["dep:mithril-dmq"]

[dependencies]
anyhow = { workspace = true }
bincode = { version = "2.0.1" }
clap = { workspace = true }
config = { workspace = true }
libp2p = { version = "0.56.0", features = [
    "tokio",
    "gossipsub",
    "dns",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "pnet",
    "quic",
    "tcp",
    "tls",
    "websocket-websys",
    "websocket",
    "yamux",
] }
mithril-common = { path = "../mithril-common" }
mithril-dmq = { path = "../internal/mithril-dmq", optional = true }
mithril-doc = { path = "../internal/mithril-doc" }
mithril-test-http-server = { path = "../internal/tests/mithril-test-http-server" }
reqwest = { workspace = true, features = [
    "default",
    "gzip",
    "zstd",
    "deflate",
    "brotli"
] }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
slog-async = { workspace = true }
slog-bunyan = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
warp = { workspace = true }

[dev-dependencies]
httpmock = "0.8.1"
slog-scope = "4.4.0"
slog-term = { workspace = true }
