[package]
name = "mithril-signer"
version = "0.2.227"
description = "A Mithril Signer"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bench]]
name = "mktree_store_sqlite"
harness = false

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive", "env"] }
config = "0.15.7"
hex = "0.4.3"
mithril-common = { path = "../mithril-common", features = ["full"] }
mithril-doc = { path = "../internal/mithril-doc" }
mithril-metric = { path = "../internal/mithril-metric" }
mithril-persistence = { path = "../internal/mithril-persistence" }
paste = "1.0.15"
prometheus = "0.13.4"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
slog-async = "2.8.0"
slog-bunyan = "2.5.0"
sqlite = { version = "0.36.1", features = ["bundled"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
http = "1.2.0"
httpmock = "0.7.0"
mithril-common = { path = "../mithril-common" }
mockall = "0.13.1"
prometheus-parse = "0.2.5"
slog-scope = "4.4.0"
slog-term = "2.9.1"

[features]
default = ["jemallocator"]

bundle_tls = ["reqwest/native-tls-vendored"]
jemallocator = ["dep:tikv-jemallocator"]
