[package]
name = "mithril-signer"
version = "0.2.239"
description = "A Mithril Signer"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bench]]
name = "mktree_store_sqlite"
harness = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
mithril-cli-helper = { path = "../internal/mithril-cli-helper" }
mithril-common = { path = "../mithril-common", features = ["full"] }
mithril-doc = { path = "../internal/mithril-doc" }
mithril-metric = { path = "../internal/mithril-metric" }
mithril-persistence = { path = "../internal/mithril-persistence" }
mithril-signed-entity-lock = { path = "../internal/signed-entity/mithril-signed-entity-lock" }
mithril-signed-entity-preloader = { path = "../internal/signed-entity/mithril-signed-entity-preloader" }
rand_core = { workspace = true }
reqwest = { workspace = true, features = [
    "default",
    "stream",
    "gzip",
    "zstd",
    "deflate",
    "brotli"
] }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
slog-async = { workspace = true }
slog-bunyan = { workspace = true }
sqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
http = "1.3.1"
httpmock = "0.7.0"
mithril-common = { path = "../mithril-common" }
mockall = { workspace = true }
prometheus-parse = "0.2.5"
slog-scope = "4.4.0"
slog-term = { workspace = true }

[features]
default = ["jemallocator"]

bundle_tls = ["reqwest/native-tls-vendored"]
jemallocator = ["dep:tikv-jemallocator"]
