[package]
name = "mithril-signer"
version = "0.2.276"
description = "A Mithril Signer"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
# reqwest: for features configuration, indirect dependency via `mithril-aggregator-client`
ignored = ["reqwest"]

[features]
default = ["jemallocator"]

bundle_tls = ["reqwest/native-tls-vendored"]
jemallocator = ["dep:tikv-jemallocator"]
future_dmq = ["dep:mithril-dmq"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
mithril-aggregator-client = { path = "../internal/mithril-aggregator-client" }
mithril-cardano-node-chain = { path = "../internal/cardano-node/mithril-cardano-node-chain" }
mithril-cardano-node-internal-database = { path = "../internal/cardano-node/mithril-cardano-node-internal-database" }
mithril-cli-helper = { path = "../internal/mithril-cli-helper" }
mithril-common = { path = "../mithril-common" }
mithril-dmq = { path = "../internal/mithril-dmq", optional = true }
mithril-doc = { path = "../internal/mithril-doc" }
mithril-era = { path = "../internal/mithril-era" }
mithril-metric = { path = "../internal/mithril-metric" }
mithril-persistence = { path = "../internal/mithril-persistence" }
mithril-protocol-config = { path = "../internal/mithril-protocol-config" }
mithril-signed-entity-lock = { path = "../internal/signed-entity/mithril-signed-entity-lock" }
mithril-signed-entity-preloader = { path = "../internal/signed-entity/mithril-signed-entity-preloader" }
mithril-ticker = { path = "../internal/mithril-ticker" }
rand_core = { workspace = true }
reqwest = { workspace = true, features = [
    "default",
    "stream",
    "gzip",
    "zstd",
    "deflate",
    "brotli"
] }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
slog-async = { workspace = true }
slog-bunyan = { workspace = true }
sqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }
httpmock = "0.8.1"
mockall = { workspace = true }
prometheus-parse = "0.2.5"
slog-scope = "4.4.0"
slog-term = { workspace = true }

[[bench]]
name = "mktree_store_sqlite"
harness = false
