[package]
name = "mithril-stm"
version = "0.6.3"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A Rust implementation of Mithril Stake-based Threshold Multisignatures (STMs)."
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["rug-backend"]
rug-backend = ["rug/default"]
num-integer-backend = ["dep:num-bigint", "dep:num-rational", "dep:num-traits"]
benchmark-internals = [] # For benchmarking multi_sig
future_proof_system = [] # For activating future proof systems
basic_verifier = [] # For activating basic verifier
future_snark = [
    "dep:ff",
    "dep:group",
    "dep:num-traits",
    "dep:dusk-poseidon",
    "dep:dusk-jubjub",
] # For activating snark features

[dependencies]
anyhow = { workspace = true }
blake2 = "0.10.6"
# Enforce blst portable feature for runtime detection of Intel ADX instruction set.
blst = { version = "0.3.16", features = ["portable"] }
digest = { workspace = true }
dusk-jubjub = { version = "0.15.1", optional = true }
dusk-poseidon = { version = "0.41.0", optional = true }
ff = { version = "0.13.1", optional = true }
group = { version = "0.13.0", optional = true }
num-traits = { version = "0.2.19", optional = true }
rand_core = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(any(target_family = "wasm", target_env = "musl", windows))'.dependencies]
# WASM and Windows don't support rug backend, fallback to num-integer only
num-bigint = { version = "0.4.6" }
num-rational = { version = "0.4.2" }
num-traits = { version = "0.2.19" }

[target.'cfg(not(any(target_family = "wasm", target_env = "musl", windows)))'.dependencies]
num-bigint = { version = "0.4.6", optional = true }
num-rational = { version = "0.4.2", optional = true }
num-traits = { version = "0.2.19", optional = true }
# only unix supports the rug backend
rug = { version = "1.28.0", optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
num-bigint = "0.4.6"
num-rational = "0.4.2"
proptest = "1.8.0"
rand = "0.9.2"
rand_chacha = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "multi_sig"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "basic_verifier_size"
harness = false
required-features = ["basic_verifier"]
path = "benches/basic_verifier/size.rs"

[[bench]]
name = "basic_verifier_protocol"
harness = false
required-features = ["basic_verifier"]
path = "benches/basic_verifier/protocol.rs"

[[bench]]
name = "schnorr_sig"
harness = false
required-features = ["future_snark"]

[[bench]]
name = "stm"
harness = false

[[bench]]
name = "size_benches"
harness = false
