[package]
name = "mithril-stm"
version = "0.9.16"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A Rust implementation of Mithril Stake-based Threshold Multisignatures (STMs)."
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["rug-backend"]
benchmark-internals = [] # For benchmarking
future_snark = [
    "dep:ff",
    "dep:group",
    "dep:midnight-circuits",
    "dep:midnight-curves",
    "dep:midnight-proofs",
    "dep:midnight-zk-stdlib",
    "dep:num-bigint",
    "dep:num-traits",
    "dep:rand",
    "dep:sha2",
] # For activating snark features
num-integer-backend = ["dep:num-bigint", "dep:num-rational", "dep:num-traits"]
rug-backend = ["rug/default"]

[dependencies]
anyhow = { workspace = true }
blake2 = "0.10.6"
# Enforce blst portable feature for runtime detection of Intel ADX instruction set.
blst = { version = "0.3.16", features = ["portable"] }
digest = { workspace = true }
ff = { version = "0.13.1", optional = true }
group = { version = "0.13.0", optional = true }
midnight-circuits = { version = "6.0.0", optional = true }
midnight-curves = { version = "0.2.0", optional = true }
midnight-proofs = { version = "0.7.0", optional = true }
midnight-zk-stdlib = { version = "1.0.0", optional = true }
num-bigint = { version = "0.4.6", optional = true }
num-traits = { version = "0.2.19", optional = true }
rand = { version = "0.9.2", optional = true }
rand_core = { workspace = true, features = ["std"] }
rayon = { workspace = true }
serde = { workspace = true }
sha2 = { version = "0.10.9", optional = true }
thiserror = { workspace = true }

[target.'cfg(any(target_family = "wasm", target_env = "musl", windows))'.dependencies]
# WASM and Windows don't support rug backend, fallback to num-integer only
num-bigint = { version = "0.4.6" }
num-rational = { version = "0.4.2" }
num-traits = { version = "0.2.19" }

[target.'cfg(not(any(target_family = "wasm", target_env = "musl", windows)))'.dependencies]
num-bigint = { version = "0.4.6", optional = true }
num-rational = { version = "0.4.2", optional = true }
num-traits = { version = "0.2.19", optional = true }
# only unix supports the rug backend
rug = { version = "1.28.0", optional = true }

[dev-dependencies]
blake2b_simd = "1"
criterion = { version = "0.8.1", features = ["html_reports"] }
num-bigint = "0.4.6"
num-rational = "0.4.2"
proptest = "1.9.0"
rand = "0.9.2"
rand_chacha = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "multi_sig"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "schnorr_sig"
harness = false
required-features = ["future_snark", "benchmark-internals"]

[[bench]]
name = "stm"
harness = false

[[bench]]
name = "size_benches"
harness = false
