[package]
name = "poc-utxo-reader"
version = "0.0.1"
description = "A PoC of a Cardano transaction reader from immutable files"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
hex = "0.4.3"
pallas = "0.19.1"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlite = { version = "0.31.1", features = ["bundled"] }
