[package]
name = "poc-wasm-client"
version = "0.1.0"
authors = ["greg"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
web-sys = "0.3"
mithril-stm = { path = "../mithril-stm", default-features = false, features = [
    "num-integer-backend",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
config = "0.13.3"
blake2 = "0.10.4"
serde_bytes = "0.11.12"
serde_json = "1.0.107"
serde = "1.0.188"
hex = "0.4.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
