[package]
name = "poc-wasm-client"
version = "0.1.0"
authors = ["greg"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
mithril-stm = { path = "../mithril-stm", default-features = false, features = [
    "num-integer-backend",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
config = "0.13.3"
blake2 = "0.10.4"
serde_bytes = "0.11.12"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["serde_derive"] }
hex = "0.4.3"
sha2 = "0.10.8"
chrono = "0.4.31"
kes-summed-ed25519 = { version = "0.2.1", features = ["sk_clone_enabled"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "serde"] }
wasm-bindgen-futures = "0.4.37"


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
