[package]
name = "rust-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mithril = { path = "../rust" }
actix-web = "4.0.0-rc.1"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0",  features = ["derive"] }
clap = { version = "3.0.14", features = ["derive"] }
base64 = "0.13.0"

rand_core   = "0.6.3"
rand_chacha = "0.3.1"
rand = "0.7"
ark-bls12-377 = "0.3.0"
ark-std      = "0.3.0"
ark-ff      = "0.3.0"
ark-ec      = "0.3.0"
blake2      = "0.9.2"


