[package]
name    = "mithril"
version = "0.1.0"
edition = "2018"

[lib]
name = "mithril"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
ark-std      = "0.3.0"
ark-ec      = "0.3.0"
ark-ff      = "0.3.0"
ark-bls12-377 = "0.3.0"
ark-crypto-primitives = "0.3.0"
digest      = { version = "0.9.0", features=["alloc"] }
num-bigint  = "0.4.0"
num-traits  = "0.2.14"
typenum     = "1.14.0"
rand        = "0.8"
rand_core   = "0.6.3"
blake2      = "0.9.2"
generic-array = "0.14"
ark-bn254     = { version = "0.3.0", optional = true }
ark-bw6-761   = { version = "0.3.0", optional = true }
ark-cp6-782   = { version = "0.3.0", optional = true }

[build-dependencies]
cbindgen    = "0.7.1"

[dev-dependencies]
criterion   = "0.3.5"
rayon       = "1.5.1"
proptest    = "1.0.0"
rand_chacha = "0.3.1"

[[bench]]
name = "merkle_tree_create"
harness = false

[features]
default = ["example_curves"]
example_curves = ["ark-bn254", "ark-bw6-761", "ark-cp6-782"]
