[package]
name    = "mithril"
version = "0.1.0"
edition = "2018"

[lib]
name = "mithril"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
ark-std      = "0.3.0"
ark-ec      = "0.3.0"
ark-ff      = "0.3.0"
ark-bls12-377 = "0.3.0"
ark-crypto-primitives = "0.3.0"
digest      = { version = "0.9.0", features=["alloc"] }
num-bigint  = "0.4.0"
num-rational = "0.4.0"
num-traits  = "0.2.14"
typenum     = "1.14.0"
rand_core   = "0.6.3"
blake2      = "0.9.2"
generic-array = "0.14"
libc        = "0.2.40"
thiserror = "1.0"
num-integer = {version = "0.1.44", optional=true }
rug = { version = "1.14", optional=true }
bytes = "1"

[build-dependencies]
cbindgen    = "0.7.1"

[dev-dependencies]
criterion   = { version = "0.3.5", features =["html_reports"] }
rayon       = "1.5.1"
proptest    = "1.0.0"
rand_chacha = "0.3.1"
num-integer = "0.1.44"
rand = "0.7"
ark-bn254     = { version = "0.3.0" }
ark-bw6-761   = { version = "0.3.0" }
ark-cp6-782   = { version = "0.3.0" }
curve25519-dalek = "3"
ed25519-dalek = "1"
sha2 = "0.9"

[[bench]]
name = "merkle_tree_create"
harness = false

[[bench]]
name = "msp"
harness = false

[[bench]]
name = "stm"
harness = false

[[bench]]
name = "size_benches"
harness = false

[features]
default = ["rug"]
rug-backend = ["rug/default"]
pure-rust = ["num-integer/default"]
