[package]
name = "mithrildemo"
version = "0.1.36"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
base64 = "0.22.0"
blake2 = "0.10.6"
clap = { version = "4.4.18", features = ["derive"] }
hex = "0.4.3"
log = "0.4.20"
mithril-common = { path = "../../mithril-common", features = ["fs"] }
mithril-doc = { path = "../../internal/mithril-doc" }
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[target.'cfg(not(windows))'.dependencies]
# non-windows: use default rug backend
mithril-stm = { path = "../../mithril-stm" }

[target.'cfg(windows)'.dependencies]
# Windows doesn't support rug backend, fallback to num-integer
mithril-stm = { path = "../../mithril-stm", default-features = false, features = [
    "num-integer-backend",
] }
