[package]
name = "mithrildemo"
version = "0.1.48"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.5.32", features = ["derive"] }
hex = "0.4.3"
mithril-common = { path = "../../mithril-common", features = ["fs"] }
mithril-doc = { path = "../../internal/mithril-doc" }
rand_chacha = "0.9.0"
rand_core = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(not(windows))'.dependencies]
# non-windows: use default rug backend
mithril-stm = { path = "../../mithril-stm" }

[target.'cfg(windows)'.dependencies]
# Windows doesn't support rug backend, fallback to num-integer
mithril-stm = { path = "../../mithril-stm", default-features = false, features = [
    "num-integer-backend",
] }
