[package]
name = "mithrildemo"
version = "0.1.52"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
blake2 = "0.10.6"
clap = { workspace = true }
hex = { workspace = true }
mithril-common = { path = "../../mithril-common" }
mithril-doc = { path = "../../internal/mithril-doc" }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
# non-windows: use default rug backend
mithril-stm = { path = "../../mithril-stm" }

[target.'cfg(windows)'.dependencies]
# Windows doesn't support rug backend, fallback to num-integer
mithril-stm = { path = "../../mithril-stm", default-features = false, features = [
    "num-integer-backend",
] }
